--- a/tela_de_login.html
+++ b/tela_de_login.html
@@ -10,7 +10,7 @@
 </head>
 <body text="aling-center">
   <form>
-    <div class="row mb-3">
+    <div>
       <label for="inputEmail3" class="col-sm-2 col-form-label">Email</label>
       <div class="col-sm-5">
         <form class="row g-3">
