--- a/tela_de_login.html
+++ b/tela_de_login.html
@@ -1,37 +1,35 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>tela de login</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="login.css">
+
+<head>
+  <meta charset='utf-8'>
+  <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+  <title>tela de login</title>
+  <meta name='viewport' content='width=device-width, initial-scale=1'>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <link rel="stylesheet" href="login.css">
+  <script src="alerta.js"></script>
 </head>
-<body text="aling-center">
+
+<body style="background-color: rgb(214, 214, 221);">
   <form>
-    <div>
-      <label for="inputEmail3" class="col-sm-2 col-form-label">Email</label>
-      <div class="col-sm-5">
-      </div>
-        <form class="row g-3">
+    <h3 align="center">cadastre-se </h3>
+
+    <div class="row mb-3">
+      <label for="inputEmail3" class="col-sm-2 col-form-label">Gmail</label>
+      <div class="col-sm-6">
         <input type="email" class="form-control" id="inputEmail3">
       </div>
-    </div>  
-     
+    </div>
     <div class="row mb-3">
       <label for="inputPassword3" class="col-sm-2 col-form-label">senha</label>
-      <div class="col-sm-5">
+      <div class="col-sm-6">
         <input type="password" class="form-control" id="inputPassword3">
       </div>
     </div>
-    <button type="submit" class="btn btn-primary">enviar</button>
-    <img src="logos.jpg" alt="">
-  </form>
+   <button type="submit" class="btn btn-primary" onclick="bloqLogin()" > <a href="tela_login2.html">Entrar</a></button>
+    </for>
 </body>
-</html> 
- 
 
-  
-  
-    
+</html>
