agrega as mudanças no repositorio

--- a/tela_login2.html
+++ b/tela_login2.html
@@ -5,13 +5,30 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>tela de login2</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='tala_de_login.html' type='text/css' media='screen' href='main.css'>
+    <link rel='tala_de_login.html' type='login' media='screen' href='tela_de_login.html'>
     <script src='main.js'></script>
 </head>
-<body>
-    <li><a href="tela_de_login.html"></a></li>
-    <li><a href="login.css"></a></li>
-    <h3>parabens você consugiu entrar na sua conta</h3>
+<body> 
+    <style>
+
+
+    body{
+        background-image:url(pexels-felixmittermeier-956999.jpg);
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-size:cover;
+        }
+        h1{
+            color: rgb(255, 251, 251);
+            letter-spacing: 20px;
+            left: 100px;
+            padding-left: 100px;
+            padding-top: 300px;
+        }
+       
+        </style>
+
+    <h1> você consugiu entrar na sua conta</h1>
     
 </body>
 </html>
